# aero

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md
resources/: aero.desktop  com.github.lainx86.aero.metainfo.xml
src/: main.cpp
src/engine/: AudioRecorderEngine.cpp  AudioRecorderEngine.h  WaveformProvider.cpp  WaveformProvider.h
src/models/: AudioInputDeviceModel.cpp  AudioInputDeviceModel.h  RecordingInfo.cpp  RecordingInfo.h  RecordingListModel.cpp  RecordingListModel.h
src/qml/: Main.qml  RecordButton.qml  RecorderPanel.qml  RecordingSidebar.qml  VUMeter.qml  WaveformVisualizer.qml
